# ChronoProton

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  claude.md
.github/workflows/: ci.yml
benches/: gpu_benchmarks.rs  integration_benchmarks.rs
docs/: architecture.md  gpu_programming_guide.md  user_guide.md
examples/configs/: driven_tls.toml
src/: lib.rs  main.rs
src/core/: floquet.rs  hamiltonian.rs  integrator.rs  lindblad.rs  mod.rs  observables.rs  state.rs
src/core/systems/: cavity.rs  coupled_cavities.rs  driven_tls.rs  mod.rs
src/data/: checkpoint.rs  config.rs  export.rs  mod.rs
src/gpu/: backend.rs  batch.rs  kernels.rs  memory.rs  mod.rs
src/simulation/: builder.rs  mod.rs  results.rs  runner.rs  scheduler.rs
src/sweep/: executor.rs  mod.rs  parameter.rs  strategy.rs
src/ui/: cli.rs  mod.rs
src/ui/gui/: app.rs  mod.rs  plots.rs  state_viz.rs  widgets.rs
src/utils/: error.rs  logger.rs  math.rs  mod.rs
tests/integration/: mod.rs  test_driven_tls.rs
